src/components/Header/Header.styl
@import "~style/common.styl"

#app .header
  margin-bottom .714rem

  .icon
    margin-right 0
    color $purple_medium

  .icons
    .icon
      &:first-child
        vertical-align middle
      &:last-child
        color $white

  h3
    margin-left .357rem

  .header-btn
    vertical-align sub
    float right

